# pyroxide

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-COFFEE  LICENSE-MIT  README.md  benchmark_baseline.txt  benchmark_optimized.txt  pyproject.toml  test.py  test_boundary.py
.github/workflows/: ci.yml  deploy_docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  batch_submission.md  benchmarks.md  cancellation.md  comparison.md  concurrency_async.md  custom_native_logic.md  getting_started.md  installation.md  introduction.md  isolated_workers.md  native_plugins.md  tracebacks.md  universal_ffi.md  wasm_engine.md
docs/src/api/: pyroxide.html
examples/: 01_threaded_tasks.py  02_batch_submissions.py  03_asyncio_integration.py  04_traceback_propagation.py  05_isolated_processes.py  06_task_cancellation.py  07_shared_memory_routing.py  08_native_compilation.py  09_wasm_sandboxing.py  10_oop_proxies_ffi.py  bench_helper.py  benchmark.py  benchmark_large_payload.py  benchmark_vs_alternatives.py  odoo_addon_poc_test.py  odoo_poc_helper.py  pyroxide_features_guide.py  test.py  test_dynamic.py  test_prod.py
examples/benchmarks/: benchmark.py  benchmark_vs_alternatives.py
examples/odoo_addon/models/: heavy_model.py
examples/odoo_poc/: 01_odoo_ledger_audit.py  02_odoo_gil_free.py  03_odoo_process_isolation_shm.py  04_odoo_crash_safety.py  05_odoo_scale_to_zero.py  06_odoo_cancellation.py  07_odoo_dynamic_settings.py  08_odoo_benchmarks.py  odoo_addon_poc_test.py  odoo_complex_simulation.py  odoo_poc_helper.py
examples/odoo_poc/odoo_addon/: __manifest__.py
examples/odoo_poc/odoo_addon/models/: __init__.py
examples/scratch/: test.py  test_dynamic.py  test_prod.py  test_refinements.py
python/pyroxide/: __init__.py  cli.py  config.py  decorators.py  plugins.py  stubs.py  types.py  wasm.py  worker.py  workflows.py
scripts/: generate_docs.sh
src/: broker.rs  lib.rs  process_pool.rs  worker.rs  worker_process.rs
tests/: conftest.py  isolated_helper.py  test_audit_improvements.py  test_c_zig_plugins.py  test_cancellation.py  test_cli.py  test_compiler_validation.py  test_concurrency.py  test_config.py  test_isolated.py  test_memory.py  test_panic_safety.py  test_plugins.py  test_security_remediation.py  test_stress.py  test_stubs.py  test_wasm.py
tests/resources/: rot13.wasm
