[package]
name = "pyroxide"
version = "0.5.2"
authors = ["Emirhan TALA <tala.emirhan@gmail.com>"]
description = "A lock-free, high-concurrency background task broker for Python, powered by Rust."
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emivvvvv/pyroxide"
documentation = "https://emivvvvv.github.io/pyroxide/"
keywords = ["rust", "python", "pyo3", "concurrency", "lock-free", "task-broker", "background-tasks", "gil-free", "multithreading", "performance"]


[lib]
# "cdylib" produces the shared library required by Python C-extensions
name = "_pyroxide"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.16"
# Enable the "extension-module" feature to build a native Python module
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }
slab = "0.4.12"
wasmtime = "21.0"
libloading = "0.8"
rand = "0.8.5"
interprocess = "1.2.1"
shared_memory = "0.12.4"
